[AI Fix] (a11y ADA compliance): fix recurring home card and blockquote contrast roots

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -158,6 +158,10 @@ blockquote {
   letter-spacing: -1px;
   font-style: italic;
 
+  p {
+    color: #5f5f5f;
+  }
+
   > :last-child {
     margin-bottom: 0;
   }
